--- a/packages/documentation/static/webcomponent-examples/tree-custom.html
+++ b/packages/documentation/static/webcomponent-examples/tree-custom.html
@@ -27,6 +27,33 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
         await window.customElements.whenDefined('cw-tree');
         const tree = document.getElementById('tree');
 
+        tree.renderItem = (index, item, dataList, context, update) => {
+          const el = document.createElement('cw-tree-item');
+          el.hasChildren = item.hasChildren;
+          el.context = context;
+
+          const div = document.createElement('div');
+          div.style.display = 'flex';
+
+          const name = document.createElement('span');
+          const icon = document.createElement('cw-icon');
+          icon.name = 'print';
+          icon.style.marginRight = '1rem';
+
+          div.appendChild(icon);
+          div.appendChild(name);
+
+          name.innerText = item.data.name;
+
+          el.appendChild(div);
+
+          update((updateTreeItem) => {
+            name.innerText = updateTreeItem.data.name;
+          });
+
+          return el;
+        };
+
         tree.model = {
           root: {
             id: 'root',
