fix(aggrid/style): use theme variables in filter

--- a/packages/aggrid/src/index.html
+++ b/packages/aggrid/src/index.html
@@ -20,7 +20,7 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/ix/dist/siemens-ix/siemens-ix.css" />
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
-  <body class="theme-brand-dark" style="height: 100vh; width: 100vw">
+  <body class="theme-classic-dark" style="height: 100vh; width: 100vw">
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
   </body>
 </html>
