docs(core/kpi): update example

--- a/packages/documentation/static/webcomponent-examples/kpi.html
+++ b/packages/documentation/static/webcomponent-examples/kpi.html
@@ -35,9 +35,9 @@ SPDX-License-Identifier: MIT
     <div class="example">
       <!-- Preview code -->
       <ix-kpi label="Motor speed" value="Nominal"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" unit="rpm"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" state="alarm"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" state="warning"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" unit="rpm"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" state="alarm"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" state="warning"></ix-kpi>
 
       <ix-kpi
         label="Motor speed"
@@ -46,7 +46,7 @@ SPDX-License-Identifier: MIT
       ></ix-kpi>
       <ix-kpi
         label="Motor speed"
-        value="{122.6}"
+        value="122.6"
         unit="rpm"
         state="alarm"
         orientation="vertical"
