--- a/packages/documentation/static/webcomponent-examples/modal.html
+++ b/packages/documentation/static/webcomponent-examples/modal.html
@@ -35,6 +35,7 @@ SPDX-License-Identifier: MIT
         <div class="modal-header">
           Message headline
           <ix-icon-button
+            data-button-close
             ghost
             icon="close"
             class="dismiss-modal"
