--- a/packages/documentation/static/webcomponent-examples/aggrid.html
+++ b/packages/documentation/static/webcomponent-examples/aggrid.html
@@ -8,28 +8,34 @@ SPDX-License-Identifier: MIT
 <html>
   <head>
     <title>Blind example</title>
-    <link rel="stylesheet" href="lib/ix-icons/dist/css/ix-icons.css" />
+    <link rel="stylesheet" href="lib/@siemens/ix-icons/dist/css/ix-icons.css" />
 
     <!-- Load AG-Grid library -->
     <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>
 
     <!-- Load AG-Grid Siemens IX theme -->
-    <link rel="stylesheet" href="lib/ix-aggrid/dist/ix-aggrid/ix-aggrid.css" />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css"
+    />
 
     <!-- *optional* Load wrapper component <ix-ag-grid /> with predefined class -->
     <script type="module">
-      import { defineCustomElements } from './lib/ix-aggrid/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix-aggrid/loader/index.js';
       defineCustomElements();
     </script>
 
     <!-- Load Siemens IX -->
-    <link rel="stylesheet" href="lib/ix/dist/siemens-ix/siemens-ix.css" />
     <link
       rel="stylesheet"
-      href="lib/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+      href="lib/@siemens/ix/dist/siemens-ix/siemens-ix.css"
+    />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <script type="module">
-      import { defineCustomElements } from './lib/ix/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix/loader/index.js';
       defineCustomElements();
     </script>
   </head>
