--- a/packages/documentation/static/webcomponent-examples/echarts.html
+++ b/packages/documentation/static/webcomponent-examples/echarts.html
@@ -8,16 +8,19 @@ SPDX-License-Identifier: MIT
 <html>
   <head>
     <title>Dropdown example</title>
-    <link rel="stylesheet" href="lib/ix-icons/dist/css/ix-icons.css" />
-    <link rel="stylesheet" href="lib/ix/dist/siemens-ix/siemens-ix.css" />
+    <link rel="stylesheet" href="lib/@siemens/ix-icons/dist/css/ix-icons.css" />
     <link
       rel="stylesheet"
-      href="lib/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+      href="lib/@siemens/ix/dist/siemens-ix/siemens-ix.css"
+    />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.3.3/dist/echarts.min.js"></script>
     <script src="lib/@siemens/ix-echarts/index.esm.js"></script>
     <script type="module">
-      import { defineCustomElements } from './lib/ix/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix/loader/index.js';
       defineCustomElements();
     </script>
   </head>
