--- a/packages/documentation/static/webcomponent-examples/event-list.html
+++ b/packages/documentation/static/webcomponent-examples/event-list.html
@@ -8,14 +8,17 @@ SPDX-License-Identifier: MIT
 <html>
   <head>
     <title>Event list example</title>
-    <link rel="stylesheet" href="lib/ix-icons/dist/css/ix-icons.css" />
-    <link rel="stylesheet" href="lib/ix/dist/siemens-ix/siemens-ix.css" />
+    <link rel="stylesheet" href="lib/@siemens/ix-icons/dist/css/ix-icons.css" />
     <link
       rel="stylesheet"
-      href="lib/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+      href="lib/@siemens/ix/dist/siemens-ix/siemens-ix.css"
+    />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <script type="module">
-      import { defineCustomElements } from './lib/ix/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix/loader/index.js';
       defineCustomElements();
     </script>
   </head>
