--- a/packages/documentation/static/webcomponent-examples/tabs.html
+++ b/packages/documentation/static/webcomponent-examples/tabs.html
@@ -8,20 +8,21 @@ SPDX-License-Identifier: MIT
 <html>
   <head>
     <title>Select example</title>
-    <link rel="stylesheet" href="lib/ix-icons/dist/css/ix-icons.css" />
-    <link rel="stylesheet" href="lib/ix/dist/siemens-ix/siemens-ix.css" />
+    <link rel="stylesheet" href="lib/@siemens/ix-icons/dist/css/ix-icons.css" />
     <link
       rel="stylesheet"
-      href="lib/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+      href="lib/@siemens/ix/dist/siemens-ix/siemens-ix.css"
+    />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <script type="module">
-      import { defineCustomElements } from './lib/ix/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix/loader/index.js';
       defineCustomElements();
     </script>
 
-    <style>
-
-    </style>
+    <style></style>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
@@ -34,5 +35,3 @@ SPDX-License-Identifier: MIT
     <script type="text/javascript" src="lib/utils/demo.js"></script>
   </body>
 </html>
-
-
