--- a/packages/documentation/static/webcomponent-examples/workflow.html
+++ b/packages/documentation/static/webcomponent-examples/workflow.html
@@ -11,10 +11,13 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
 <html>
   <head>
     <title>Workflow example</title>
-    <link rel="stylesheet" href="lib/ix-icons/dist/css/ix-icons.css" />
-    <link rel="stylesheet" href="lib/ix/dist/siemens-ix/siemens-ix.css" />
+    <link rel="stylesheet" href="lib/@siemens/ix-icons/dist/css/ix-icons.css" />
+    <link
+      rel="stylesheet"
+      href="lib/@siemens/ix/dist/siemens-ix/siemens-ix.css"
+    />
     <script type="module">
-      import { defineCustomElements } from './lib/ix/loader/index.js';
+      import { defineCustomElements } from './lib/@siemens/ix/loader/index.js';
       defineCustomElements();
     </script>
   </head>
