docs(core/button): change button labels

--- a/packages/documentation/static/webcomponent-examples/buttons.html
+++ b/packages/documentation/static/webcomponent-examples/buttons.html
@@ -24,10 +24,10 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-button class="m-1" variant="primary">Webcomponents button</ix-button>
-    <ix-button class="m-1" variant="secondary">Webcomponents button</ix-button>
-    <ix-button class="m-1" outline>Webcomponents button</ix-button>
-    <ix-button class="m-1" invisible>Webcomponents button</ix-button>
+    <ix-button class="m-1" variant="primary">Button</ix-button>
+    <ix-button class="m-1" variant="secondary">Button</ix-button>
+    <ix-button class="m-1" outline>Button</ix-button>
+    <ix-button class="m-1" invisible>Button</ix-button>
     <!-- Preview code -->
     <script type="text/javascript" src="lib/utils/demo.js"></script>
   </body>
