--- a/packages/html-test-app/src/preview-examples/buttons copy.html
+++ b/packages/html-test-app/src/preview-examples/buttons copy.html
@@ -1,17 +1,20 @@
+<!--
+SPDX-FileCopyrightText: 2022 Siemens AG
+
+SPDX-License-Identifier: MIT
+-->
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Buttons example</title>
   </head>
-  <body>
+  <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-button class="m-1" variant="primary">Button</ix-button>
     <ix-button class="m-1" variant="secondary">Button</ix-button>
     <ix-button class="m-1" outline>Button</ix-button>
     <ix-button class="m-1" invisible>Button</ix-button>
-    <ix-icon name="rocket"></ix-icon>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
