--- a/packages/html-test-app/src/preview-examples/workflow.html
+++ b/packages/html-test-app/src/preview-examples/workflow.html
@@ -14,7 +14,7 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-workflow-steps vertical>
+    <ix-workflow-steps>
       <ix-workflow-step status="done">Step 1</ix-workflow-step>
       <ix-workflow-step status="success">Step 2</ix-workflow-step>
       <ix-workflow-step status="open">Step 3</ix-workflow-step>
