--- a/packages/html-test-app/src/preview-examples/datepicker.html
+++ b/packages/html-test-app/src/preview-examples/datepicker.html
@@ -7,11 +7,11 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blind example</title>
+    <title>Date picker example</title>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-date-picker></ix-date-picker>
+    <ix-date-picker year="2020" month="1" day="20" range={false} minDate={DateTime.fromISO("2020-01-05")} maxDate={DateTime.fromISO("2020-01-25")}></ix-date-picker>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
