--- a/packages/html-test-app/src/preview-examples/datepicker.html
+++ b/packages/html-test-app/src/preview-examples/datepicker.html
@@ -11,7 +11,17 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-date-picker year="2020" month="1" day="20" range={false} minDate={DateTime.fromISO("2020-01-05")} maxDate={DateTime.fromISO("2020-01-25")}></ix-date-picker>
+    <ix-date-picker
+      year="2020"
+      month="1"
+      day="20"
+      range="{false}"
+    ></ix-date-picker>
+    <script>
+      const datePicker = document.querySelector('ix-date-picker');
+      datePicker.minDate = DateTime.fromISO('2020-01-05');
+      datePicker.maxDate = DateTime.fromISO('2020-01-25');
+    </script>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
