--- a/packages/html-test-app/src/preview-examples/tabs-rounded.html
+++ b/packages/html-test-app/src/preview-examples/tabs-rounded.html
@@ -15,9 +15,9 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <ix-tabs rounded>
       <ix-tab-item><ix-icon name="success"></ix-icon></ix-tab-item>
-      <ix-tab-item counter="{200}"><ix-icon name="tree"></ix-icon></ix-tab-item>
+      <ix-tab-item counter="200"><ix-icon name="tree"></ix-icon></ix-tab-item>
       <ix-tab-item><ix-icon name="maintenance"></ix-icon></ix-tab-item>
-      <ix-tab-item disabled counter="{24}"
+      <ix-tab-item disabled counter="24"
         ><ix-icon name="sound-loud"></ix-icon
       ></ix-tab-item>
       <ix-tab-item><ix-icon name="hierarchy"></ix-icon></ix-tab-item>
