--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -21,6 +21,18 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
   <body style="margin: 0px; height: 100vh">
-    <my-component />
+    <ix-map-navigation
+  application-name="Test Application"
+  navigation-title="Some other content"
+>
+  <ix-icon name="rocket" slot="logo"></ix-icon>
+  <ix-menu>
+    <ix-menu-item>Item 1</ix-menu-item>
+    <ix-menu-item>Item 2</ix-menu-item>
+    <ix-menu-item>Item 3</ix-menu-item>
+  </ix-menu>
+  <div slot="sidebar-content">Sidebar content</div>
+  <div>Sidebar content</div>
+</ix-map-navigation>
   </body>
 </html>
