fix(documentation): button examples

--- a/packages/html-test-app/src/preview-examples/buttons.html
+++ b/packages/html-test-app/src/preview-examples/buttons.html
@@ -7,10 +7,35 @@
   </head>
   <body>
     <!-- Preview code -->
-    <ix-button class="m-1" variant="primary">Button</ix-button>
-    <ix-button class="m-1" variant="secondary">Button</ix-button>
-    <ix-button class="m-1" outline>Button</ix-button>
-    <ix-button class="m-1" invisible>Button</ix-button>
+    <div>
+      <ix-button class="m-1" variant="Primary">
+        Button
+      </ix-button>
+      <ix-button class="m-1" variant="Secondary">
+        Button
+      </ix-button>
+      <ix-button class="m-1" outline>
+        Button
+      </ix-button>
+      <ix-button class="m-1" ghost>
+        Button
+      </ix-button>
+
+      <div>
+        <ix-button class="m-1" variant="Primary">
+          <ix-icon name="star"></ix-icon>Button
+        </ix-button>
+        <ix-button class="m-1" variant="Secondary">
+          <ix-icon name="star"></ix-icon>Button
+        </ix-button>
+        <ix-button class="m-1" outline>
+          <ix-icon name="star"></ix-icon>Button
+        </ix-button>
+        <ix-button class="m-1" ghost>
+          <ix-icon name="star"></ix-icon>Button
+        </ix-button>
+      </div>
+    </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
