--- a/packages/html-test-app/src/preview-examples/datepicker-range.html
+++ b/packages/html-test-app/src/preview-examples/datepicker-range.html
@@ -9,9 +9,9 @@ SPDX-License-Identifier: MIT
   <head>
     <title>Date picker example</title>
   </head>
-  <body class="theme-brand-dark">
+  <body class="theme-classic-dark">
     <!-- Preview code -->
-    <ix-date-picker></ix-date-picker>
+    <ix-date-picker from="2022/12/15" to="2022/12/24"></ix-date-picker>
     </script>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
