--- a/packages/html-test-app/src/preview-examples/button-text-icon.html
+++ b/packages/html-test-app/src/preview-examples/button-text-icon.html
@@ -9,10 +9,16 @@
     <!-- Preview code -->
     <div>
       <ix-button class="m-1" variant="Primary">
-        Button
+        <ix-icon name="star"></ix-icon>Button
       </ix-button>
-      <ix-button class="m-1" disabled variant="Primary">
-        Button
+      <ix-button class="m-1" variant="Secondary">
+        <ix-icon name="star"></ix-icon>Button
+      </ix-button>
+      <ix-button class="m-1" outline>
+        <ix-icon name="star"></ix-icon>Button
+      </ix-button>
+      <ix-button class="m-1" ghost>
+        <ix-icon name="star"></ix-icon>Button
       </ix-button>
     </div>
     <!-- Preview code -->
