--- a/packages/html-test-app/src/preview-examples/button-ghost.html
+++ b/packages/html-test-app/src/preview-examples/button-ghost.html
@@ -8,10 +8,10 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" variant="Primary">
+      <ix-button class="m-1" invisible variant="Primary">
         Button
       </ix-button>
-      <ix-button class="m-1" disabled variant="Primary">
+      <ix-button class="m-1" disabled invisible variant="Primary">
         Button
       </ix-button>
     </div>
