--- a/packages/html-test-app/src/preview-examples/menu-with-bottom-tabs.html
+++ b/packages/html-test-app/src/preview-examples/menu-with-bottom-tabs.html
@@ -7,18 +7,13 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vertical tabs example</title>
+    <title>Navigation menu with bottom tabs example</title>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-menu>
       <ix-menu-item home-tab tab-icon="home"> Home </ix-menu-item>
-      <ix-menu-item tab-icon="globe"> Normal Tab </ix-menu-item>
-      <ix-menu-item tab-icon="star" disabled> Disabled tab </ix-menu-item>
-      <ix-menu-item tab-icon="star"> With other icon </ix-menu-item>
-      <ix-menu-item tab-icon="globe" style="display: none">
-        Should not be visible
-      </ix-menu-item>
+      <ix-menu-item tab-icon="info" slot="bottom"> Bottom tab </ix-menu-item>
     </ix-menu>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
