--- a/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
+++ b/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
@@ -17,10 +17,10 @@ SPDX-License-Identifier: MIT
       </ix-menu-avatar>
       <ix-menu-item home-tab tab-icon="home"> Home </ix-menu-item>
       <ix-menu-item tab-icon="globe"> Normal Tab </ix-menu-item>
-      <ix-menu-item tab-icon="star" disabled> Disabled Tab </ix-menu-item>
-      <ix-menu-item tab-icon="star"> With other Icon </ix-menu-item>
+      <ix-menu-item tab-icon="star" disabled> Disabled tab </ix-menu-item>
+      <ix-menu-item tab-icon="star"> With other icon </ix-menu-item>
       <ix-menu-item tab-icon="globe" style="display: none">
-        Should not visible
+        Should not be visible
       </ix-menu-item>
     </ix-menu>
     <!-- Preview code -->
