--- a/packages/html-test-app/src/preview-examples/button-group.html
+++ b/packages/html-test-app/src/preview-examples/button-group.html
@@ -12,9 +12,10 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="btn-group">
-      <ix-button outline>Left</ix-button>
-      <ix-button>Middle</ix-button>
-      <ix-button outline>Right</ix-button>
+      <ix-button outline>Button 1</ix-button>
+      <ix-button>Button 2</ix-button>
+      <ix-button outline>Button 3</ix-button>
+      <ix-button outline>Button 4</ix-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
