--- a/packages/html-test-app/src/preview-examples/modal.html
+++ b/packages/html-test-app/src/preview-examples/modal.html
@@ -7,18 +7,11 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Buttons example</title>
+    <title>Modal example</title>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <div>
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-      eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-      voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-      clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-      amet.
-    </div>
-    <ix-button>Show Modal</ix-button>
+    <ix-button>Show modal</ix-button>
 
     <template id="custom-modal">
       <div>
