feat(core/modal): return modal instance when opening a new modal

--- a/packages/html-test-app/src/preview-examples/modal.html
+++ b/packages/html-test-app/src/preview-examples/modal.html
@@ -56,9 +56,12 @@ SPDX-License-Identifier: MIT
         );
 
         const button = document.querySelector('ix-button');
-        button.addEventListener('click', () => {
-          modal({
+        button.addEventListener('click', async () => {
+          const m = await modal({
             content: customModal,
+          });
+          m.htmlElement.addEventListener('keydown', (keyEvent) => {
+            console.log(keyEvent.key);
           });
         });
       })();
