--- a/packages/html-test-app/src/preview-examples/map-navigation.html
+++ b/packages/html-test-app/src/preview-examples/map-navigation.html
@@ -16,7 +16,7 @@ SPDX-License-Identifier: MIT
       application-name="Test Application"
       navigation-title="Some other content"
     >
-      <ix-icon name="rocket" slot="logo"></ix-icon>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
