--- a/packages/html-test-app/src/preview-examples/popover-news.html
+++ b/packages/html-test-app/src/preview-examples/popover-news.html
@@ -12,6 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-basic-navigation>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-about>
           <ix-menu-about-item label="Example"> </ix-menu-about-item>
