--- a/packages/html-test-app/src/preview-examples/settings.html
+++ b/packages/html-test-app/src/preview-examples/settings.html
@@ -12,6 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-basic-navigation>
+      <div class="placeholder-logo" slot="logo"></div>
       <ix-menu>
         <ix-menu-settings>
           <ix-menu-settings-item
