fix(core/checkbox, core/radiobutton): hide native intput without event suppression

--- a/packages/html-test-app/src/preview-examples/aggrid.html
+++ b/packages/html-test-app/src/preview-examples/aggrid.html
@@ -9,6 +9,14 @@ SPDX-License-Identifier: MIT
   <head>
     <title>Blind example</title>
     <script src="https://unpkg.com/ag-grid-community/dist/ag-grid-community.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
+    />
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
