test(core/select): add vrt

--- a/packages/html-test-app/src/preview-examples/modal.html
+++ b/packages/html-test-app/src/preview-examples/modal.html
@@ -51,7 +51,7 @@ SPDX-License-Identifier: MIT
 
         customModal.querySelectorAll('.dismiss-modal').forEach((item) =>
           item.addEventListener('click', () => {
-            dismissModal(customModal, 'canceled!');
+            dismissModal(customModal, 'cancelled!');
           })
         );
 
