--- a/packages/aggrid/src/index.html
+++ b/packages/aggrid/src/index.html
@@ -21,6 +21,6 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
   <body class="theme-classic-dark" style="height: 100vh; width: 100vw">
-    <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <my-component></my-component>
   </body>
 </html>
