refactor(global): replace all occurrences of deprecated prop invisible by ghost

--- a/packages/html-test-app/src/preview-examples/button-selected.html
+++ b/packages/html-test-app/src/preview-examples/button-selected.html
@@ -11,10 +11,8 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-button class="m-1" variant="Secondary" invisible
-      >Not selected</ix-button
-    >
-    <ix-button class="m-1" variant="Secondary" invisible selected
+    <ix-button class="m-1" variant="Secondary" ghost>Not selected</ix-button>
+    <ix-button class="m-1" variant="Secondary" ghost selected
       >Selected</ix-button
     >
     <!-- Preview code -->
