--- a/packages/html-test-app/src/preview-examples/button-ghost.html
+++ b/packages/html-test-app/src/preview-examples/button-ghost.html
@@ -8,10 +8,8 @@
   <body>
     <!-- Preview code -->
     <div>
-      <ix-button class="m-1" invisible variant="Primary">
-        Button
-      </ix-button>
-      <ix-button class="m-1" disabled invisible variant="Primary">
+      <ix-button class="m-1" ghost variant="Primary"> Button </ix-button>
+      <ix-button class="m-1" disabled ghost variant="Primary">
         Button
       </ix-button>
     </div>
