refactor: remove button item; fix triangle colors

--- a/packages/html-test-app/src/preview-examples/dropdown-button.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-button.html
@@ -26,19 +26,9 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div class="example">
-      <ix-dropdown-button
-        label="Dropdown"
-        variant="Primary"
-        icon="checkboxes"
-      >
-        <ix-dropdown-button-item
-        label="Item 1"
-        value="1"
-        ></ix-dropdown-button-item>
-        <ix-dropdown-button-item
-        label="Item 2"
-        value="2"
-        ></ix-dropdown-button-item>
+      <ix-dropdown-button label="Dropdown" variant="Primary" icon="checkboxes">
+        <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
+        <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
@@ -46,14 +36,8 @@ SPDX-License-Identifier: MIT
         outline
         icon="checkboxes"
       >
-        <ix-dropdown-button-item
-        label="Item 1"
-        value="1"
-        ></ix-dropdown-button-item>
-        <ix-dropdown-button-item
-        label="Item 2"
-        value="2"
-        ></ix-dropdown-button-item>
+        <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
+        <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
@@ -61,14 +45,8 @@ SPDX-License-Identifier: MIT
         ghost
         icon="checkboxes"
       >
-        <ix-dropdown-button-item
-        label="Item 1"
-        value="1"
-        ></ix-dropdown-button-item>
-        <ix-dropdown-button-item
-        label="Item 2"
-        value="2"
-        ></ix-dropdown-button-item>
+        <ix-dropdown-item label="Item 1" value="1"></ix-dropdown-item>
+        <ix-dropdown-item label="Item 2" value="2"></ix-dropdown-item>
       </ix-dropdown-button>
       <ix-dropdown-button
         label="Dropdown"
@@ -76,7 +54,7 @@ SPDX-License-Identifier: MIT
         disabled
         icon="checkboxes"
       >
-    </ix-dropdown-button>
+      </ix-dropdown-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
