--- a/packages/html-test-app/src/preview-examples/input-disabled.html
+++ b/packages/html-test-app/src/preview-examples/input-disabled.html
@@ -21,6 +21,11 @@ SPDX-License-Identifier: MIT
       />
     </form>
     <!-- Preview code -->
+    <script>
+      document
+        .querySelector('form')
+        .addEventListener('submit', (evt) => evt.preventDefault());
+    </script>
     <script type="module" src="./init.js"></script>
   </body>
 </html>
