--- a/packages/html-test-app/src/preview-examples/map-navigation-overlay.html
+++ b/packages/html-test-app/src/preview-examples/map-navigation-overlay.html
@@ -17,14 +17,16 @@ SPDX-License-Identifier: MIT
       navigation-title="Some other content"
     >
       <div class="placeholder-logo" slot="logo"></div>
+
       <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
       </ix-menu>
       <ix-button id="btn-open-overlay">Open overlay</ix-button>
+      <div id="overlay-content"></div>
     </ix-map-navigation>
 
     <script type="module">
-      const mapNav = document.querySelector('ix-map-navigation');
+      const mapNav = document.querySelector('#overlay-content');
       const buttonOpenOverlay = document.getElementById('btn-open-overlay');
 
       buttonOpenOverlay.addEventListener('click', () => {
