docs(split-button): fix api and icon

--- a/packages/html-test-app/src/preview-examples/split-button-icons.html
+++ b/packages/html-test-app/src/preview-examples/split-button-icons.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-split-button icon="document">
+    <ix-split-button icon="document" split-icon="chevron-down-small">
       <ix-split-button-item icon="cut"></ix-split-button-item>
       <ix-split-button-item icon="bulb"></ix-split-button-item>
     </ix-split-button>
