--- a/packages/html-test-app/src/preview-examples/split-button.html
+++ b/packages/html-test-app/src/preview-examples/split-button.html
@@ -11,7 +11,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-split-button label="Action text">
+    <ix-split-button label="Action text" split-icon="chevron-down-small">
       <ix-split-button-item label="Item 1"></ix-split-button-item>
       <ix-split-button-item label="Item 2"></ix-split-button-item>
     </ix-split-button>
