--- a/packages/html-test-app/src/preview-examples/dropdown-quick-actions.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-quick-actions.html
@@ -7,18 +7,21 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dropdown header example</title>
+    <title>Dropdown quick actions example</title>
   </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-button id="iconTriggerId">Open</ix-button>
-    <ix-dropdown enableQuickActions trigger="iconTriggerId">
-      <div slot="quick-actions">
-        <ix-dropdown-item icon="cut"></ix-dropdown-item>
-        <ix-dropdown-item icon="copy"></ix-dropdown-item>
-        <ix-dropdown-item icon="screen"></ix-dropdown-item>
-        <ix-dropdown-item icon="trashcan"></ix-dropdown-item>
-      </div>
+
+    <ix-dropdown trigger="iconTriggerId">
+      <ix-dropdown-quick-actions>
+        <ix-icon-button icon="cut" ghost></ix-icon-button>
+        <ix-icon-button icon="bulb" outline></ix-icon-button>
+        <ix-icon-button icon="trashcan"></ix-icon-button>
+      </ix-dropdown-quick-actions>
+
+      <ix-divider></ix-divider>
+
       <ix-dropdown-item icon="star" label="Item 1"></ix-dropdown-item>
       <ix-dropdown-item icon="document" label="Item 2"></ix-dropdown-item>
       <ix-dropdown-item icon="bulb" label="Item 3"></ix-dropdown-item>
