fix(core): middle gap

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -20,31 +20,7 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/siemens-ix.css" />
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
-  <body style="margin: 0px; height: 100vh; width: 200px">
-    <ix-split-button label="Action text" split-icon="chevron-down-small">
-      <ix-split-button-item label="Item 1"></ix-split-button-item>
-      <ix-split-button-item label="Item 2"></ix-split-button-item>
-    </ix-split-button>
-
-    <ix-split-button
-      outline
-      label="Action text"
-      split-icon="chevron-down-small"
-    >
-      <ix-split-button-item label="Item 1"></ix-split-button-item>
-      <ix-split-button-item label="Item 2"></ix-split-button-item>
-    </ix-split-button>
-
-    <div style="margin-top: 10px" class="btn-group">
-      <ix-button outline>Button 1</ix-button>
-      <ix-button outline>Button 2</ix-button>
-      <ix-button outline>Button 3</ix-button>
-      <ix-button outline>Button 4</ix-button>
-    </div>
-
-    <div style="margin-top: 10px" class="btn-group">
-      <ix-button outline>Button 1</ix-button>
-      <ix-button outline>Button 4</ix-button>
-    </div>
+  <body style="margin: 0px; height: 100vh">
+    <my-component />
   </body>
 </html>
