--- a/packages/html-test-app/src/preview-examples/tooltip-title.html
+++ b/packages/html-test-app/src/preview-examples/tooltip-title.html
@@ -13,11 +13,8 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <div style="padding: 4rem">
       <ix-button data-tooltip="myTooltip">Hover me</ix-button>
-      <ix-tooltip
-        for="[data-tooltip='myTooltip']"
-        title-icon="rocket"
-        title-content="My Tooltip"
-      >
+      <ix-tooltip for="[data-tooltip='myTooltip']" title-content="My Tooltip">
+        <ix-icon name="rocket" slot="title-icon"></ix-icon>
         Some example content
       </ix-tooltip>
     </div>
