feat: add default brand style loading

--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -18,6 +18,10 @@ SPDX-License-Identifier: MIT
     <script nomodule src="/build/siemens-ix.js"></script>
 
     <link rel="stylesheet" href="/build/siemens-ix.css" />
+    <link
+      rel="stylesheet"
+      href="/build/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
+    />
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
   <body style="margin: 0px; height: 100vh">
