--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -21,119 +21,6 @@ SPDX-License-Identifier: MIT
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
   </head>
   <body style="margin: 0px; height: 100vh">
-    <ix-menu>
-      <ix-menu-about>
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-        <ix-menu-about-item label="Biggest Tab possible 1"
-          >Content 1</ix-menu-about-item
-        >
-
-        <ix-menu-about-item label="Tab 2">Content 2</ix-menu-about-item>
-        <style>
-          .example {
-            display: block;
-            position: relative;
-            width: 100%;
-          }
-
-          div[data-tab-content] {
-            display: none;
-          }
-
-          div[data-tab-content].show {
-            display: block;
-          }
-        </style>
-        <div class="example">
-          <ix-tabs layout="auto">
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-            <ix-tab-item data-tab-id="0">Biggest Tab possible 1</ix-tab-item>
-          </ix-tabs>
-          <div data-tab-content="0" class="show">Content Tab 1</div>
-          <div data-tab-content="1">Content Tab 2</div>
-          <div data-tab-content="2">Content Tab 3</div>
-        </div>
-
-        <script>
-          (async function () {
-            await window.customElements.whenDefined('ix-tabs');
-            const tabs = document.querySelectorAll('ix-tab-item[data-tab-id]');
-
-            function registerClickListener(tab) {
-              tab.addEventListener('click', (tabContent) => {
-                const contentList =
-                  document.querySelectorAll('[data-tab-content]');
-                contentList.forEach((content) => {
-                  if (content.dataset.tabContent === tab.dataset.tabId) {
-                    content.classList.add('show');
-                  } else {
-                    content.classList.remove('show');
-                  }
-                });
-              });
-            }
-
-            tabs.forEach(registerClickListener);
-          })();
-        </script>
-      </ix-menu-about>
-    </ix-menu>
-    <script>
-      (async function () {
-        await window.customElements.whenDefined('ix-menu');
-        const instance = document.querySelector('ix-menu');
-        await instance.toggleAbout(true);
-      })();
-    </script>
+    <my-component />
   </body>
 </html>
