--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -23,6 +23,10 @@ SPDX-License-Identifier: MIT
       href="/build/ix-brand-theme/dist/ix-brand-theme/ix-brand-theme.css"
     />
     <link rel="stylesheet" href="/build/ix-icons/css/ix-icons.css" />
+    <script type="module">
+      import { defineCustomElements } from '/build/ix-brand-theme/loader/index.es2017.js';
+      defineCustomElements();
+    </script>
   </head>
   <body style="margin: 0px; height: 100vh">
     <my-component />
