--- a/packages/html-test-app/src/preview-examples/about-and-legal.html
+++ b/packages/html-test-app/src/preview-examples/about-and-legal.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-basic-navigation>
-      <div class="placeholder-logo" slot="logo"></div>
+      <placeholder-logo slot="logo"></placeholder-logo>
       <ix-menu>
         <ix-menu-about>
           <ix-menu-about-item label="Tab 1">Content 1</ix-menu-about-item>
