--- a/packages/html-test-app/src/preview-examples/map-navigation-overlay.html
+++ b/packages/html-test-app/src/preview-examples/map-navigation-overlay.html
@@ -16,8 +16,7 @@ SPDX-License-Identifier: MIT
       application-name="Test Application"
       navigation-title="Some other content"
     >
-      <div class="placeholder-logo" slot="logo"></div>
-
+      <placeholder-logo slot="logo"></placeholder-logo>
       <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
       </ix-menu>
