feat: add colors table

--- a/packages/core/src/tests/dropdown/disabled/index.html
+++ b/packages/core/src/tests/dropdown/disabled/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body style="width: 100vw; height: 100vh">
     <ix-button id="trigger">Open</ix-button>
-    <ix-dropdown trigger="trigger">
+    <ix-dropdown trigger="trigger" close-behavior="inside">
       <ix-dropdown-item
         id="test"
         label="Item 1"
