--- a/packages/html-test-app/src/preview-examples/validation.html
+++ b/packages/html-test-app/src/preview-examples/validation.html
@@ -36,8 +36,10 @@ SPDX-License-Identifier: MIT
       </div>
       <div class="row">
         <div class="col-md-4">
-          <label for="validationCustom02" class="form-label"> Last name </label>
           <ix-validation-tooltip message="Cannot be empty!">
+            <label for="validationCustom02" class="form-label">
+              Last name
+            </label>
             <input
               type="text"
               class="form-control"
