--- a/packages/html-test-app/src/preview-examples/dropdown-quick-actions.html
+++ b/packages/html-test-app/src/preview-examples/dropdown-quick-actions.html
@@ -16,11 +16,9 @@ SPDX-License-Identifier: MIT
     <ix-dropdown trigger="iconTriggerId">
       <ix-dropdown-quick-actions>
         <ix-icon-button icon="cut" ghost></ix-icon-button>
-        <ix-icon-button icon="bulb" outline></ix-icon-button>
-        <ix-icon-button icon="trashcan"></ix-icon-button>
+        <ix-icon-button icon="bulb" ghost></ix-icon-button>
+        <ix-icon-button icon="trashcan" ghost></ix-icon-button>
       </ix-dropdown-quick-actions>
-
-      <ix-divider></ix-divider>
 
       <ix-dropdown-item icon="star" label="Item 1"></ix-dropdown-item>
       <ix-dropdown-item icon="document" label="Item 2"></ix-dropdown-item>
