--- a/packages/html-test-app/src/preview-examples/toast-position.html
+++ b/packages/html-test-app/src/preview-examples/toast-position.html
@@ -15,12 +15,11 @@ SPDX-License-Identifier: MIT
 
     <ix-button id="toastButton">Trigger toast</ix-button>
     <script type="module">
-      import { toast } from '@siemens/ix';
+      import { toast, setToastPosition } from '@siemens/ix';
 
       (async function () {
         await window.customElements.whenDefined('ix-toast-container');
-        const toastContainer = document.querySelector('ix-toast-container');
-        toastContainer.position = 'top-right';
+        setToastPosition('top-right');
         document.getElementById('toastButton').addEventListener('click', () => {
           toast({
             message: 'My toast message!',
