test: remove with scrollIntoView

--- a/packages/core/src/tests/workflow-steps/overflow/index.html
+++ b/packages/core/src/tests/workflow-steps/overflow/index.html
@@ -17,7 +17,7 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
     <title>Stencil Component Starter</title>
     <style>
       .example {
-        width: 40%;
+        width: 400px;
         overflow: auto;
       }
     </style>
