--- a/packages/core/src/tests/group/basic/index.html
+++ b/packages/core/src/tests/group/basic/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-group header="Header text" sub-header="Subheader text">
+    <ix-group id="group" header="Header text" sub-header="Subheader text">
       <ix-group-item text="Example text 1"></ix-group-item>
       <ix-group-item text="Example text 2"></ix-group-item>
       <ix-group-item text="Example text 3"></ix-group-item>
