refactor(core/breadcrumb): simplify overflow and augment tests

--- a/packages/core/src/tests/breadcrumb/basic/index.html
+++ b/packages/core/src/tests/breadcrumb/basic/index.html
@@ -17,13 +17,19 @@ SPDX-License-Identifier: MIT
     <ix-breadcrumb>
       <ix-breadcrumb-item icon="home" label="Root"></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 1"></ix-breadcrumb-item>
-      <ix-breadcrumb-item label="Level 2"></ix-breadcrumb-item>
+      <ix-breadcrumb-item
+        label="Level 2 with artificial overflow"
+      ></ix-breadcrumb-item>
+      <ix-breadcrumb-item label="Level 3"></ix-breadcrumb-item>
     </ix-breadcrumb>
 
     <ix-breadcrumb ghost>
       <ix-breadcrumb-item icon="home" label="Root"></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 1"></ix-breadcrumb-item>
-      <ix-breadcrumb-item label="Level 2"></ix-breadcrumb-item>
+      <ix-breadcrumb-item
+        label="Level 2 with artificial overflow"
+      ></ix-breadcrumb-item>
+      <ix-breadcrumb-item label="Level 3"></ix-breadcrumb-item>
     </ix-breadcrumb>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
