Revert "fix(core): attribute defining"
This reverts commit 67a3e9c6a6e501b7278c9ccee2a4a49c85ecd474, reversing
changes made to 715d50d10b557f34ff2d4e9a469568f6cf071e84.

--- a/packages/core/src/tests/utils/ct/index.html
+++ b/packages/core/src/tests/utils/ct/index.html
@@ -14,11 +14,8 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-group id="group" header="Header text" sub-header="Subheader text">
-      <ix-group-item text="Example text 1"></ix-group-item>
-      <ix-group-item text="Example text 2"></ix-group-item>
-      <ix-group-item text="Example text 3"></ix-group-item>
-    </ix-group>
+    <div id="mount"></div>
+
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
