--- a/packages/html-test-app/src/preview-examples/blind-header-actions.html
+++ b/packages/html-test-app/src/preview-examples/blind-header-actions.html
@@ -15,6 +15,7 @@ SPDX-License-Identifier: MIT
       <ix-icon-button
         id="context-menu"
         slot="header-actions"
+        ghost
         icon="context-menu"
       ></ix-icon-button>
       Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
