feat(core/empty-state): minor fixes

--- a/packages/core/src/tests/page-header/basic/index.html
+++ b/packages/core/src/tests/page-header/basic/index.html
@@ -17,7 +17,7 @@ SPDX-License-Identifier: MIT
     <ix-page-header
       has-back-button="true"
       header-title="content title"
-      header-subtitle="subtitle content asdf"
+      header-subtitle="subtitle content"
     >
       <ix-button ghost="{true}">Button1</ix-button>
       <ix-button ghost="{true}">Button2</ix-button>
@@ -25,7 +25,7 @@ SPDX-License-Identifier: MIT
     </ix-page-header>
     <ix-page-header
       header-title="content title"
-      header-subtitle="subtitle content asdf"
+      header-subtitle="subtitle content"
     >
       <ix-icon-button icon="pen" ghost="{true}" variant="Primary">
         Button1
