docs: add card-list

--- a/packages/core/src/tests/card-list/basic/index.html
+++ b/packages/core/src/tests/card-list/basic/index.html
@@ -20,68 +20,68 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-card-list label="example label" show-more-count="1337">
-      <ix-notification-card
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="insight"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="notification"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="alarm"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="critical"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="warning"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="success"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="info"
-      ></ix-notification-card>
-      <ix-notification-card
+      ></ix-push-card>
+      <ix-push-card
         icon="bulb"
         notification="99"
         heading="Heading content"
         subheading="Subheading"
         variant="neutral"
-      ></ix-notification-card>
+      ></ix-push-card>
     </ix-card-list>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
