feat: add show more card

--- a/packages/core/src/tests/card-list/basic/index.html
+++ b/packages/core/src/tests/card-list/basic/index.html
@@ -19,7 +19,7 @@ SPDX-License-Identifier: MIT
     </style>
   </head>
   <body>
-    <ix-card-list label="example label" show-more-count="1337">
+    <ix-card-list label="example label" show-all-count="1337">
       <ix-push-card
         icon="bulb"
         notification="99"
