fix: adjust example code

--- a/packages/html-test-app/src/preview-examples/card-list.html
+++ b/packages/html-test-app/src/preview-examples/card-list.html
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
   </head>
   <body>
     <!-- Preview code -->
-    <ix-card-list label="Layout Stack" show-more-count="12" list-style="stack">
+    <ix-card-list label="Layout Stack" show-all-count="12" list-style="stack">
       <ix-push-card
         icon="rocket"
         notification="3"
@@ -39,7 +39,7 @@ LICENSE file in the root directory of this source tree.
       ></ix-push-card>
     </ix-card-list>
 
-    <ix-card-list label="Layout Flow" show-more-count="12" list-style="scroll">
+    <ix-card-list label="Layout Flow" show-all-count="12" list-style="scroll">
       <ix-push-card
         icon="rocket"
         notification="3"
