docs: split examples

--- a/packages/html-test-app/src/preview-examples/page-header-no-back.html
+++ b/packages/html-test-app/src/preview-examples/page-header-no-back.html
@@ -12,13 +12,19 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-page-header
-      has-back-button="true"
+      variant="Secondary"
       header-title="Content title"
       header-subtitle="Subtitle"
     >
-      <ix-button ghost="true">Button1</ix-button>
-      <ix-button ghost="true">Button2</ix-button>
-      <ix-button ghost="true">Button3</ix-button>
+      <ix-icon-button icon="pen" ghost="true" variant="Primary">
+        Button1
+      </ix-icon-button>
+      <ix-icon-button icon="trashcan" ghost="true" variant="Primary">
+        Button2
+      </ix-icon-button>
+      <ix-icon-button icon="context-menu" ghost="true" variant="Primary">
+        Button3
+      </ix-icon-button>
     </ix-page-header>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
