docs(core/key-value): add key value docs

--- a/packages/core/src/tests/key-value/basic/index.html
+++ b/packages/core/src/tests/key-value/basic/index.html
@@ -36,7 +36,7 @@ SPDX-License-Identifier: MIT
         class="form-control"
         placeholder="Enter text here"
         type="text"
-        slot="value-component"
+        slot="custom-value"
       />
     </ix-key-value>
 
@@ -45,7 +45,7 @@ SPDX-License-Identifier: MIT
         class="form-control"
         placeholder="Enter text here"
         type="text"
-        slot="value-component"
+        slot="custom-value"
       />
     </ix-key-value>
 
@@ -54,7 +54,7 @@ SPDX-License-Identifier: MIT
         class="form-control"
         placeholder="Enter text here"
         type="text"
-        slot="value-component"
+        slot="custom-value"
       />
     </ix-key-value>
 
@@ -63,7 +63,7 @@ SPDX-License-Identifier: MIT
         class="form-control"
         placeholder="Enter text here"
         type="text"
-        slot="value-component"
+        slot="custom-value"
       />
     </ix-key-value>
 
