--- a/packages/core/src/tests/key-value-list/basic/index.html
+++ b/packages/core/src/tests/key-value-list/basic/index.html
@@ -63,7 +63,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
 
@@ -72,7 +72,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
 
@@ -81,7 +81,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
     </ix-key-value-list>
@@ -92,7 +92,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
 
@@ -101,7 +101,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
 
@@ -110,7 +110,7 @@ SPDX-License-Identifier: MIT
           class="form-control"
           placeholder="Enter text here"
           type="text"
-          slot="value-component"
+          slot="custom-value"
         />
       </ix-key-value>
     </ix-key-value-list>
