refactor(core/breadcrumb): enable shadow dom

--- a/packages/core/src/tests/breadcrumb/basic/index.html
+++ b/packages/core/src/tests/breadcrumb/basic/index.html
@@ -18,7 +18,7 @@ SPDX-License-Identifier: MIT
       <ix-breadcrumb-item icon="home" label="Root"></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 1"></ix-breadcrumb-item>
       <ix-breadcrumb-item
-        label="Level 2 with artificial overflow"
+        label="Level 2 with artificial overflow text"
       ></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 3"></ix-breadcrumb-item>
     </ix-breadcrumb>
@@ -27,7 +27,7 @@ SPDX-License-Identifier: MIT
       <ix-breadcrumb-item icon="home" label="Root"></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 1"></ix-breadcrumb-item>
       <ix-breadcrumb-item
-        label="Level 2 with artificial overflow"
+        label="Level 2 with artificial overflow text"
       ></ix-breadcrumb-item>
       <ix-breadcrumb-item label="Level 3"></ix-breadcrumb-item>
     </ix-breadcrumb>
