chore(core/content-header): rename page-header to content-header

--- a/packages/core/src/tests/content-header/secondary/index.html
+++ b/packages/core/src/tests/content-header/secondary/index.html
@@ -14,18 +14,20 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-page-header
+    <ix-content-header
+      variant="Secondary"
       has-back-button="true"
       header-title="content title"
-      header-subtitle="subtitle content"
+      header-subtitle="subtitle content asdf"
     >
       <ix-button ghost="{true}">Button1</ix-button>
       <ix-button ghost="{true}">Button2</ix-button>
       <ix-button ghost="{true}">Button3</ix-button>
-    </ix-page-header>
-    <ix-page-header
+    </ix-content-header>
+    <ix-content-header
+      variant="Secondary"
       header-title="content title"
-      header-subtitle="subtitle content"
+      header-subtitle="subtitle content asdf"
     >
       <ix-icon-button icon="pen" ghost="{true}" variant="Primary">
         Button1
@@ -36,12 +38,16 @@ SPDX-License-Identifier: MIT
       <ix-icon-button icon="context-menu" ghost="{true}" variant="Primary">
         Button3
       </ix-icon-button>
-    </ix-page-header>
-    <ix-page-header
+    </ix-content-header>
+    <ix-content-header
+      variant="Secondary"
       header-title="content title with a really loooooooooong name name name name name name name name name name name name"
       header-subtitle="subtitle content  with a really loooooooooong name name name name name name name name name name name name"
-    ></ix-page-header>
-    <ix-page-header header-title="content title"></ix-page-header>
+    ></ix-content-header>
+    <ix-content-header
+      variant="Secondary"
+      header-title="content title"
+    ></ix-content-header>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
