--- a/packages/core/src/tests/content-header/basic/index.html
+++ b/packages/core/src/tests/content-header/basic/index.html
@@ -14,20 +14,18 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-page-header
-      variant="Secondary"
+    <ix-content-header
       has-back-button="true"
       header-title="content title"
-      header-subtitle="subtitle content asdf"
+      header-subtitle="subtitle content"
     >
       <ix-button ghost="{true}">Button1</ix-button>
       <ix-button ghost="{true}">Button2</ix-button>
       <ix-button ghost="{true}">Button3</ix-button>
-    </ix-page-header>
-    <ix-page-header
-      variant="Secondary"
+    </ix-content-header>
+    <ix-content-header
       header-title="content title"
-      header-subtitle="subtitle content asdf"
+      header-subtitle="subtitle content"
     >
       <ix-icon-button icon="pen" ghost="{true}" variant="Primary">
         Button1
@@ -38,16 +36,12 @@ SPDX-License-Identifier: MIT
       <ix-icon-button icon="context-menu" ghost="{true}" variant="Primary">
         Button3
       </ix-icon-button>
-    </ix-page-header>
-    <ix-page-header
-      variant="Secondary"
+    </ix-content-header>
+    <ix-content-header
       header-title="content title with a really loooooooooong name name name name name name name name name name name name"
       header-subtitle="subtitle content  with a really loooooooooong name name name name name name name name name name name name"
-    ></ix-page-header>
-    <ix-page-header
-      variant="Secondary"
-      header-title="content title"
-    ></ix-page-header>
+    ></ix-content-header>
+    <ix-content-header header-title="content title"></ix-content-header>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
