fix(core/tooltip): reflect new tooltip feature in preview examples

--- a/packages/angular-test-app/src/preview-examples/tooltip-title.html
+++ b/packages/angular-test-app/src/preview-examples/tooltip-title.html
@@ -1,5 +1,5 @@
 <div style="padding: 4rem">
-  <ix-button data-tooltip="myTooltip">Hover me</ix-button>
+  <ix-button data-tooltip="myTooltip">Hover or focus me</ix-button>
   <ix-tooltip for="[data-tooltip='myTooltip']" title-content="My Tooltip">
     <ix-icon name="rocket" slot="title-icon"></ix-icon>
     Some example content
