--- a/packages/angular-test-app/src/preview-examples/tooltip.html
+++ b/packages/angular-test-app/src/preview-examples/tooltip.html
@@ -1,4 +1,4 @@
 <div style="padding: 4rem">
-  <ix-button data-tooltip="myTooltip">Hover me</ix-button>
+  <ix-button data-tooltip="myTooltip">Hover or focus me</ix-button>
   <ix-tooltip for="[data-tooltip='myTooltip']">Some example content</ix-tooltip>
 </div>
